--- a/Zeus Web/index.html
+++ b/Zeus Web/index.html
@@ -42,17 +42,17 @@
     <div class="row">
         <div class="hobby-col">
             <h3>Programming</h3>
-            <img src="images/programming.png">
+            <img src="images/programming.jpg">
             <p>Computer programming is the process of performing a particular computation, usually by designing/building an executable computer program. Programming involves tasks such as analysis, generating algorithms, profiling algorithms' accuracy and resource consumption, and the implementation of algorithms. The source code of a program is written in one or more languages that are intelligible to programmers, rather than machine code, which is directly executed by the central processing unit. The purpose of programming is to find a sequence of instructions that will automate the performance of a task on a computer, often for solving a given problem. (wikipedia.org) </p>
         </div>
         <div class="hobby-col">
             <h3>Playing Chess</h3>
-            <img src="images/chess.png">
+            <img src="images/chess.jpg">
             <p>Chess is a board game played between two players. The current form of the game emerged in Southern Europe during the second half of the 15th century after evolving from a similar, much older game of Indian origin. It is played on a square chessboard with 64 squares arranged in an eight-by-eight grid. At the start, each player controls sixteen pieces: one king, one queen, two rooks, two knights, two bishops, and eight pawns. The object of the game is to checkmate the opponent's king, whereby the king is under immediate attack (in "check") and there is no way for it to escape. There are also several ways a game can end in a draw. The current world chess champion is Magnus Carlsen. (wikipedia.org)</p>
         </div>
         <div class="hobby-col">
             <h3>Playing Piano</h3>
-            <img src="images/piano.png">
+            <img src="images/piano.jpg">
             <p>The piano is an acoustic, keyboard, stringed percussion instrument in which the strings are struck by wooden hammers that are coated with a softer material (modern hammers are covered with dense wool felt; some early pianos used leather). It is played using a keyboard, which is a row of keys (small levers) that the performer presses down or strikes with the fingers and thumbs of both hands to cause the hammers to strike the strings that makes the sound. It was invented in Italy by Bartolomeo Cristofori around the year 1700. Piano is one of the most played instrument world wide, because piano is really simple and easy to play compared to other instrument like violin, saxophone, etc.  (wikipedia.org) </p>
         </div>
     </div>
