--- a/Zeus Web/index.html
+++ b/Zeus Web/index.html
@@ -153,7 +153,7 @@
     
 <section class="footer">
     <h4>About Me</h4>
-    <p>-----------This button doesnt do anything xD-----------</p>
+    <p>----This button doesnt do anything xD----</p>
     <div class="icons">
         <i class="fa fa-facebook"></i>
         <i class="fa fa-twitter"></i>
